Fix overflow with too many tweets

--- a/src/App.sass
+++ b/src/App.sass
@@ -4,6 +4,8 @@ body
   background-color: $primaryColor
 
 .App
-  width: 100vw
-  height: 100vh
+  width: auto
+  min-height: 100vh
+  height: auto
   background-color: $primaryColor
+  padding-bottom: 10px
