--- a/src/components/ContainerMain/ContainerMain.sass
+++ b/src/components/ContainerMain/ContainerMain.sass
@@ -2,7 +2,6 @@
 
 .ContainerMain
     width: 100%
-    height: 100vh
 
 .ContainerMain > Flex
     width: 100%
